--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "flow-bin": "0.53.0",
     "jest-expo": "^22.0.0",
     "prettier-eslint": "^8.2.2",
     "react-native-scripts": "1.7.0",
