--- a/.flowconfig
+++ b/.flowconfig
@@ -66,5 +66,11 @@ suppress_comment=\\(.\\|\n\\)*\\$FlowExpectedError
 
 unsafe.enable_getters_and_setters=true
 
+module.file_ext=.ios.js
+module.file_ext=.android.js
+module.file_ext=.js
+module.file_ext=.jsx
+module.file_ext=.json
+
 [version]
 ^0.53.0
